--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,22 @@ body {
   font-size: 12px;
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
 .floatLeft {
   float: left;
 }
@@ -59,6 +75,11 @@ body {
 
 #confidences tr:nth-child(even) { 
   background-color:#ffffff; 
+}
+
+/* export colors */
+#exportColors {
+  font-size: 40px;
 }
 
 /* d3 tooltips */
