--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,7 @@ a:active {
   color: #fff;
   border-radius: 2px;
   pointer-events: none;
+  z-index: 10000;
 }
 
 /* Creates a small triangle extender for the tooltip */
