--- a/share/acdc/assets/style.css
+++ b/share/acdc/assets/style.css
@@ -78,11 +78,11 @@ td.active {
 }
 
 td.ccConf, td.dipConf, td.kraken {
-  text-align: center;
+  text-align: right;
   width: 100px;
 }
 
-td.kraken > span.number {
+td.ccConf, td.dipConf, td.kraken > span.number {
   font-size: 16px;
   font-weight: bold;
 }
