--- a/share/acdc/assets/style.css
+++ b/share/acdc/assets/style.css
@@ -82,6 +82,10 @@ td.ccConf, td.dipConf, td.kraken {
   width: 100px;
 }
 
+td.kraken {
+  text-align: center;
+}
+
 td.ccConf, td.dipConf, td.kraken > span.number {
   font-size: 16px;
   font-weight: bold;
