--- a/share/acdc/assets/style.css
+++ b/share/acdc/assets/style.css
@@ -62,6 +62,13 @@ pre {
   margin-bottom: 25px;
 }
 
+#additionalInfo {
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
 /* confidences table */
 
 #confidences {
